--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wash-cli"
-version = "0.16.2"
+version = "0.16.3"
 authors = ["wasmCloud Team"]
 categories = ["wasm", "command-line-utilities"]
 description = "wasmcloud Shell (wash) CLI tool"
@@ -81,7 +81,7 @@ members = [ "./", "./crates/wash-lib"]
 anyhow = "1.0.70"
 assert-json-diff = "2.0.1"
 async-compression = { version = "0.3", default-features = false }
-async-nats = "0.23.0"
+async-nats = "0.29"
 atelier_core = "0.2"
 bytes = "1.4"
 cargo_atelier = "0.2"
@@ -127,18 +127,17 @@ term-table = "1.3.1"
 test-case = "2.2.1"
 test_bin = "0.4.0"
 thiserror = "1.0"
-# DO NOT UPDATE - https://github.com/wasmCloud/wash/issues/382
-tokio = { version = "=1.24.0", default-features = false }
+tokio = { version = "1.27", default-features = false }
 tokio-stream = "0.1"
 tokio-tar = "0.3"
-toml = "0.5"
+toml = "0.7"
 walkdir = "2.3"
 wascap = "0.10.1"
 wash-lib = { version = "0.7.0", path = "./crates/wash-lib" }
-wasmbus-rpc = "0.11.2"
-wasmcloud-control-interface = "0.23"
-wasmcloud-test-util = "0.6.4"
-weld-codegen = "0.6.0"
+wasmbus-rpc = "0.13"
+wasmcloud-control-interface = {version = "0.25", path = "/Users/connor/Documents/wasmCloud/control-interface-client"}
+wasmcloud-test-util = {version = "0.8", path = "/Users/connor/Documents/wasmCloud/wasmcloud-test/wasmcloud-test-util"}
+weld-codegen = "0.7"
 which = "4.4.0"
 chrono = "0.4.24"
 clap_complete = "4.2.0"
